# disctui

./: .gitignore  Cargo.toml  README.md  config.toml.example  dist-workspace.toml  justfile
.github/workflows/: release.yml
src/: action.rs  app.rs  auth.rs  config.rs  effect.rs  event.rs  logging.rs  main.rs  model.rs  store.rs  tui.rs
src/ai/: claude.rs  local.rs  mod.rs  prompt.rs
src/transport/: discord.rs  mock.rs  mod.rs
src/ui/: channels.rs  guilds.rs  input.rs  layout.rs  media.rs  messages.rs  mod.rs  popup.rs  status_bar.rs  summary.rs  theme.rs
