[package]
name = "disctui"
version = "0.1.0"
edition = "2024"
authors = ["blacktop"]
description = "A fast, minimal Discord TUI with AI-powered conversation summaries"
license = "MIT"
repository = "https://github.com/blacktop/disctui"
homepage = "https://github.com/blacktop/disctui"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
dirs = "6"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
unicode-width = "0.2"
libc = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
textwrap = "0.16"

# AI summarization
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Optional transport
diself = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }
keyring = { version = "3.6", optional = true, features = ["apple-native"] }
zeroize = { version = "1.8", features = ["derive"], optional = true }

[features]
default = []
experimental-discord = ["dep:diself", "dep:async-trait", "dep:keyring", "dep:zeroize"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
await_holding_lock = "deny"
large_futures = "deny"
exit = "deny"
mem_forget = "deny"
module_name_repetitions = "allow"
similar_names = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
